completed banner section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
                 <li><button class="btn_primary">Hire Me</button></li>
             </ul>
         </nav>
+
+        <!--- banner area css ------>
+        <div class="banner">
+            <div class="banner_content">
+                <h2 class="name_title">Hi, I  am</h2>
+                <h1 class="name">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn_primary">Download CV</button>
+                <button class="contact btn_primary">Contact</button>
+            </div>
+            <img class="hardy_pic" src="./images/hardy.png" alt="mary hardy picture here">
+        </div>
     </header>
 
     <!-- main area -->
