--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio website</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
 
     <!--- header area -->
     <header id="header">
         <!---- header nav  ---->
         <nav class="header_nav">
-            <div class="logo"><h3>Ma<span class="primary_color">r</span>y</h3></div>
+            <div class="logo">
+                <h3>Ma<span class="primary_color">r</span>y</h3>
+            </div>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
@@ -23,9 +27,10 @@
         <!--- banner area css ------>
         <div class="banner">
             <div class="banner_content">
-                <h2 class="name_title">Hi, I  am</h2>
+                <h2 class="name_title">Hi, I am</h2>
                 <h1 class="name">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
                 <button class="btn_primary">Download CV</button>
                 <button class="contact btn_primary">Contact</button>
             </div>
@@ -35,13 +40,41 @@
 
     <!-- main area -->
     <main>
-
+        <!---- about section -->
+        <section id="about">
+            <h2 class="section_title">About me</h2>
+            <p class="self_desc">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.
+            </p>
+            <div class="div_row">
+                <div class="four_div">
+                    <h4 class="div_title">Name : </h4>
+                    <p class="div_desc">Mary Hardy</p>
+                </div>
+                <div class="four_div">
+                    <h4 class="div_title">Email : </h4>
+                    <p class="div_desc">maryhardy@gmail.com</p>
+                </div>
+                <div class="four_div">
+                    <h4 class="div_title">Date of birth : </h4>
+                    <p class="div_desc">11 November 1987</p>
+                </div>
+                <div class="four_div">
+                    <h4 class="div_title">From</h4>
+                    <p class="div_desc">Los Angeles USA</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--- footer area -->
     <footer>
-        
+
     </footer>
-    
+
 </body>
+
 </html>
