--- a/index.html
+++ b/index.html
@@ -68,6 +68,35 @@
                 </div>
             </div>
         </section>
+
+        <!---- what i do section -->
+        <section id="what_i_do">
+            <h2 class="section_title">What I do</h2>
+            <p class="work_desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="work_row">
+                <div class="work_div">
+                    <img src="./images/icons/js.png" alt="javascript picture">
+                    <h3 class="work_div_title">Vanilla JavaScript</h3>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="work_div">
+                    <img src="./images/icons/react.png" alt="react picture">
+                    <h3 class="work_div_title">React</h3>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="work_div">
+                    <img src="./images/icons/nodejs.png" alt="nodejs picture">
+                    <h3 class="work_div_title">Node js</h3>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="work_div">
+                    <img src="./images/icons/mongo.png" alt="mongodb picture">
+                    <h3 class="work_div_title">MongoDB</h3>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!--- footer area -->
