completed resume section

--- a/index.html
+++ b/index.html
@@ -72,29 +72,85 @@
         <!---- what i do section -->
         <section id="what_i_do">
             <h2 class="section_title">What I do</h2>
-            <p class="work_desc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="work_desc">I have more than 10 years experience building software for clients all over the world.
+                Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more
+                about my experience? Check out my online resume and project portfolio.</p>
             <div class="work_row">
                 <div class="work_div">
                     <img src="./images/icons/js.png" alt="javascript picture">
                     <h3 class="work_div_title">Vanilla JavaScript</h3>
-                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="work_div">
                     <img src="./images/icons/react.png" alt="react picture">
                     <h3 class="work_div_title">React</h3>
-                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="work_div">
                     <img src="./images/icons/nodejs.png" alt="nodejs picture">
                     <h3 class="work_div_title">Node js</h3>
-                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="work_div">
                     <img src="./images/icons/mongo.png" alt="mongodb picture">
                     <h3 class="work_div_title">MongoDB</h3>
-                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="work_div_desc text-primary">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
+        </section>
+
+        <!---- rsume section area -->
+        <section id="resume">
+            <h2 class="section_title resume_title">A summary of My Resume</h2>
+            <div class="section_flex">
+                <div class="resume_row">
+                    <h3 class="resume_row_title">My Education</h3>
+                    <div class="resume_content">
+                        <h3 class="resume_content_title">Master in Computer Engineering</h3>
+                        <small class="text-primary">Harvard University / 2015 - 2017</small>
+                        <p class="text-primary">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume_content second_div">
+                        <h3 class="resume_content_title">Master in Computer Engineering</h3>
+                        <small class="text-primary">Harvard University / 2015 - 2017</small>
+                        <p class="text-primary">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume_content">
+                        <h3 class="resume_content_title">Master in Computer Engineering</h3>
+                        <small class="text-primary">Harvard University / 2015 - 2017</small>
+                        <p class="text-primary">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume_row">
+                    <h3 class="resume_row_title">My Experience</h3>
+                    <div class="resume_content">
+                        <h3 class="resume_content_title">Sr. Font End Developer</h3>
+                        <small class="text-primary">Apple Inc / 2020 - Current</small>
+                        <p class="text-primary">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume_content second_div">
+                        <h3 class="resume_content_title">Sr. Font End Developer</h3>
+                        <small class="text-primary">Apple Inc / 2020 - Current</small>
+                        <p class="text-primary">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume_content">
+                        <h3 class="resume_content_title">Sr. Font End Developer</h3>
+                        <small class="text-primary">Apple Inc / 2020 - Current</small>
+                        <p class="text-primary">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_div"><button class="btn_primary">Download CV</button></div>
         </section>
 
     </main>
